--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# NEXT_PUBLIC_API_URL='https://post-api-production.up.railway.app/api'
-NEXT_PUBLIC_API_URL='http://localhost:4000/api'
+NEXT_PUBLIC_API_URL='https://post-api-production.up.railway.app/api'
+# NEXT_PUBLIC_API_URL='http://localhost:4000/api'
